test/fail_compilation/fail105.d
//int foo = "foo";

// just Access Violation happens.
int bar = cast(int)cast(char*)"bar";
